[package]
name = "rocket-db-forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3" }
rusqlite = { version = "=0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
