[package]
edition = "2021"
name = "rocket-db-forms"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
chrono = "0.4.24"
protoc = "2.28.0"
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rusqlite = { version = "=0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-rocket = "0.14.0"
shuttle-runtime = "0.14.0"
time = "=0.3.15"
tokio = "1.27.0"

[dependencies.rocket_dyn_templates]
features = ["tera"]
version = "=0.1.0"
